--- a/index.html
+++ b/index.html
@@ -54,15 +54,14 @@
                     style="
                         border: 0;
                         background-color: transparent;
-                        text-decoration: underline;
-                        color: red;
+                        color: rgb(255, 0, 0);
                         font-weight: bold;
                         cursor: pointer;
                     "
                     onclick="localStorage.setItem('alreadyShowedSplash', 'true'); document.getElementById('splash').classList.add('splashHidden')"
                     style="cursor: pointer"
                 >
-                    <h2>[X]</h2>
+                    <h2>Close</h2>
                 </button>
             </h2>
             <p>
@@ -92,7 +91,6 @@
                     style="
                         border: 0;
                         background-color: transparent;
-                        text-decoration: underline;
                         color: red;
                         font-weight: bold;
                         cursor: pointer;
@@ -100,7 +98,7 @@
                     onclick="document.getElementById('sppsettings').classList.add('splashHidden')"
                     style="cursor: pointer"
                 >
-                    <h2>[X]</h2>
+                    <h2>Close</h2>
                 </button>
             </h2>
             <p>Save then reload to apply.</p>
